# bridge-agent

./: .gitignore  BRIDGE_LOCAL_CONNECTOR_SPEC.md  Cargo.toml  Jenkinsfile.bridge-agent-release  Jenkinsfile.codex-local-app-release  README.md  build.rs  index.html  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/scripts/: mirror-cli-release-to-gitee.mjs  mirror-cli-release-to-gitee.test.mjs  multipart-file-upload.mjs  multipart-file-upload.test.mjs  prepare-gitee-release.mjs  prepare-gitee-release.test.mjs  upload-release-asset.mjs
.github/workflows/: release-baijimu-cli.yml  release-bridge-agent.yml  release-codex-local-app.yml
deploy/: jenkins-bridge-agent-release.xml  jenkins-codex-local-app-release.xml
docs/: bridge-agent-user-install.md  codex-artifact-cache.md  codex-implementation-sop.md  codex-user-quickstart.md  enterprise-codex-delivery.md
scripts/: prepare-tauri-build.mjs
src/: App.tsx  bootstrap-diagnostics.ts  client-logger.ts  config-security.test.ts  config.rs  connector.rs  design-system.css  desktop.css  event_server.rs  lib.rs  logging.rs  main.rs  main.tsx  power.rs  process_identity.rs  protocol.rs  runtime.rs  secret_store.rs  services.rs  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: desktop-shortcut.nsh
src-tauri/permissions/: main.toml
src-tauri/scripts/: sign-windows-artifact.ps1  verify-windows-msi.ps1
src-tauri/src/: main.rs  managed_tool.rs
src-tauri/wix/: bridge-agent-service.wxs  desktop-shortcut.wxs
src/components/: DesktopShell.tsx
tools/baijimu-cli/: prepare-bundled-cli.sh
tools/codex-artifacts/: sync-codex-artifacts.sh
tools/diagnostics/: README.md  local-app-ui-fixture-server.rb  wkwebview-local-app-handshake.swift
tools/diagnostics/fixtures/: local-app-child.html
tools/release/: publish-codex-local-app-market.sh  publish-gitee-tag.sh  publish-github-ref.sh  wait-github-workflow.sh
