[package]
name = "bridge-agent-desktop"
version = "0.1.118"
description = "百积木本地连接客户端"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
axum = "0.8"
bridge-agent = { path = ".." }
dirs = "6.0"
log = "0.4"
open = "5.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tempfile = "3.20"
tokio = { version = "1", features = ["fs", "net", "process", "time"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
